# PyBrokenIRC

./: .gitmodules  .pylintrc  Dockerfile  README.md  classes.py  conf.py  launcher.py  pyproject.toml  selectdriver.py  setup.cfg  setup.py  utils.py
.github/workflows/: python-app.yml  wiki.yml
coremods/: control.py  corecommands.py  exttargets.py  handlers.py  login.py  service_support.py
docs/modelists/: modelists-genhtml.py
plugins/: antispam.py  automode.py  bots.py  changehost.py  commands.py  ctcp.py  example.py  exec.py  fantasy.py  games.py  global.py  networks.py  opercmds.py  relay.py  relay_clientbot.py  servermaps.py  servprotect.py  stats.py
protocols/: clientbot.py  hybrid.py  inspircd.py  ircs2s_common.py  ngircd.py  p10.py  ts6.py  ts6_common.py  unreal.py
src/pylinkirc/: classes.py  conf.py  launcher.py  log.py  mkpasswd.py  structures.py  utils.py
src/pylinkirc/coremods/: exttargets.py  login.py  permissions.py
src/pylinkirc/plugins/: raw.py  relay.py  relay_clientbot.py
src/pylinkirc/protocols/: clientbot.py  hybrid.py  inspircd.py  ircs2s_common.py  nefarious.py  ngircd.py  p10.py  ts6.py  unreal.py
test/: protocol_test_fixture.py  test_protocol_clientbot.py  test_protocol_p10.py
tests/: protocol_test_fixture.py  test_irc_parsers.py  test_protocol_inspircd.py  test_protocol_ts6_common.py  test_protocol_unreal.py  test_utils.py
